access git resource

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,9 @@
 ---
 applications:
 - name: sampletest
-  path: target\spring-helloworld-cf-0.0.1-SNAPSHOT.jar
+  path: target\pfcresource-0.0.1-SNAPSHOT.jar
   memory: 768M
   instances: 1
   random-route: true
+  services:
+  - config-server
